# arjan_software_designer

./: .gitignore  README.md  pyproject.toml  test_html
src/abstractions/: exercise_1.py  exercise_2.py
src/classes/: e01_01_from_class_to_dataclass.py  e01_02_phones.py
src/cohesion/: exercise.py  processed.csv
src/composition_over_inheritance/: car_mine.py  data_storage.py
src/functions/: e1_pure_functions_and_side_effects.py  e2_func_solution.py  e2_oo_solution.py  test_e1.py
src/inheritance_abc_protocol/: e1_social_media.py  e2_html.py
src/separate_creation_use/: exercise1.py  exercise2.py
src/start_with_data/: vehicle_rental_roy.py
